--- a/kontakt.html
+++ b/kontakt.html
@@ -50,7 +50,7 @@
       </nav>
 
       <div class="topbar__actions">
-        <a class="pill pill--primary" href="https://wa.me/4915755821180">
+        <a class="pill pill--primary" href="https://wa.me/491714745229">
           <img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp
         </a>
         <button class="burger" aria-label="Menü öffnen" aria-expanded="false" aria-controls="mobileNav">
@@ -84,14 +84,14 @@
             <p class="sub reveal">Du hast Fragen zu einer Aufbereitung oder möchtest direkt einen Termin? Schreib mir.</p>
             
             <div class="contact__meta reveal" style="margin-top:30px;">
-              <a href="https://wa.me/4915755821180" class="metaLine glass6" style="text-decoration:none; margin-bottom:10px;">
+              <a href="https://wa.me/491714745229" class="metaLine glass6" style="text-decoration:none; margin-bottom:10px;">
                   <span class="metaLine__k">WhatsApp</span>
                   <span class="metaLine__v">Chat starten →</span>
               </a>
 
-              <a href="tel:+4915755821180" class="metaLine glass6" style="text-decoration:none; margin-bottom:10px;">
+              <a href="tel:+491714745229" class="metaLine glass6" style="text-decoration:none; margin-bottom:10px;">
                   <span class="metaLine__k">Telefon</span>
-                  <span class="metaLine__v">Anrufen: 01575 5821180</span>
+                  <span class="metaLine__v">+49 171 4745229</span>
               </a>
 
               <a href="mailto:info@emredetails.de" class="metaLine glass6" style="text-decoration:none;">
@@ -159,8 +159,9 @@
         </div>
         <div class="footer__right">
           <div class="footer__legal">
-             <a class="footer__link" href="./impressum.html">Impressum</a>
-             <a class="footer__link" href="./datenschutz.html">Datenschutz</a>
+            <a class="footer__link" href="./impressum.html" role="listitem">Impressum</a>
+            <a class="footer__link" href="./agb.html" role="listitem">AGB</a>
+            <a class="footer__link" href="./datenschutz.html" role="listitem">Datenschutz</a>
           </div>
           <div class="footer__copy">© <span id="year"></span> EmreDetails</div>
         </div>
