--- a/impressum.html
+++ b/impressum.html
@@ -16,7 +16,7 @@
         <a class="nav__link" href="./leistungen.html">Leistungen</a>
         <a class="nav__link" href="./kontakt.html">Kontakt</a>
       </nav>
-      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/4915755821180"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a></div>
+      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/491714745229"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a></div>
     </div>
   </header>
 
@@ -53,7 +53,7 @@ Emre Özkul</p>
           <img class="footer__logo" src="./logo.png" alt="EmreDetails" loading="lazy" decoding="async">
         </div>
         <div class="footer__sub">
-          Fahrzeugaufbereitung in Marl. Fokus auf Innenreinigung, Lackpflege und Versiegelung.
+          Fahrzeugaufbereitung in Marl.
         </div>
       </div>
 
@@ -70,7 +70,7 @@ Emre Özkul</p>
     </div>
   </footer>
 
-  <a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">
+  <a class="fab" href="https://wa.me/491714745229" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">
     WhatsApp
   </a>
 
