--- a/kontakt.html
+++ b/kontakt.html
@@ -118,6 +118,7 @@
                     <option value="" disabled selected>Gewünschte Leistung</option>
                     <option value="Innen">Innenaufbereitung</option>
                     <option value="Außen">Außenaufbereitung</option>
+                    <option value="Außen">Politur & Versiegelung</option>
                     <option value="Komplett">Komplettpaket</option>
                     <option value="Beratung">Allgemeine Frage</option>
                   </select>
