--- a/kontakt.html
+++ b/kontakt.html
@@ -118,9 +118,9 @@
                     <option value="" disabled selected>Gewünschte Leistung</option>
                     <option value="Innen">Innenaufbereitung</option>
                     <option value="Außen">Außenaufbereitung</option>
-                    <option value="Außen">Politur & Versiegelung</option>
+                    <option value="Politur / Versiegelung">Politur & Versiegelung</option>
                     <option value="Komplett">Komplettpaket</option>
-                    <option value="Beratung">Allgemeine Frage</option>
+                    <option value="Beratung / Frage ">Allgemeine Frage</option>
                   </select>
                 </div>
                 <div class="form-group">
