--- a/leistungen.html
+++ b/leistungen.html
@@ -166,7 +166,7 @@
           <div class="service-category">Lack & Politur</div>
 
           <div class="metaLine glass6">
-            <span class="metaLine__v">One-Step Politur (Hochglanz)</span>
+            <span class="metaLine__v">One-Step Politur</span>
             <span class="metaLine__k" style="color:var(--accent);">ab 200 €</span>
           </div>
           <div class="metaLine glass6">
