--- a/kontakt.html
+++ b/kontakt.html
@@ -111,6 +111,9 @@
                   <input type="email" name="email" class="form-input" placeholder="Deine E-Mail" required>
                 </div>
                 <div class="form-group">
+                  <input type="telefon" name="telefon" class="form-input" placeholder="Deine Telefon-Nr." required>
+                </div>
+                <div class="form-group">
                   <input type="text" name="vehicle" class="form-input" placeholder="Fahrzeugmodell (z.B. Golf 7, BMW 3er)">
                 </div>
                 <div class="form-group">
