--- a/leistungen.html
+++ b/leistungen.html
@@ -204,7 +204,7 @@
             <span class="metaLine__k" style="color:var(--accent);">ab 250 €</span>
           </div>
           <div class="metaLine glass6">
-            <span class="metaLine__v">Textilversiegelung</span>
+            <span class="metaLine__v">Textilreinigung und Versiegelung</span>
             <span class="metaLine__k" style="color:var(--accent);">ab 150 €</span>
           </div>
 
