--- a/leistungen.html
+++ b/leistungen.html
@@ -192,6 +192,10 @@
             <span class="metaLine__v">Keramikversiegelung Felgen</span>
             <span class="metaLine__k" style="color:var(--accent);">ab 300 €</span>
           </div>
+          <div class="metaLine glass6">
+            <span class="metaLine__v">Scheibenversiegelung</span>
+            <span class="metaLine__k" style="color:var(--accent);">ab 80 €</span>
+          </div>
 
           <div class="service-category">Innenraum & Spezial</div>
 
