--- a/index.html
+++ b/index.html
@@ -333,38 +333,43 @@
       </div>
     </section>
 
-    <section class="section" id="faq">
+<section class="section" id="faq">
       <div class="container">
-        <div class="sectionHead reveal">
-          <h2 class="h2">Häufige Fragen.</h2>
+        
+        <div class="sectionHead reveal faq-header-center">
+          <div class="faq-glow-bg"></div> <h2 class="h2 faq-title-dominant">Häufige Fragen.</h2>
+          <p class="sub" style="margin-left: auto; margin-right: auto;">
+             Antworten auf die wichtigsten Fragen zu Ablauf, Pflege und Preisen.
+          </p>
         </div>
         
-        <div class="cards" style="grid-template-columns: 1fr;">
-<details class="faqCard reveal">
-  <summary class="h3 faqSummary">Wie lange dauert eine Aufbereitung?</summary>
-  <p class="p">Je nach Zustand und gebuchtem Paket zwischen 1 und 4 Tagen. Bei Keramikversiegelungen muss das Fahrzeug über Nacht bleiben, um optimal auszuhärten.</p>
-</details>
+        <div class="cards faq-list-centered">
+          <details class="faqCard reveal">
+            <summary class="h3 faqSummary">Wie lange dauert eine Aufbereitung?</summary>
+            <p class="p">Je nach Zustand und gebuchtem Paket zwischen 1 und 4 Tagen. Bei Keramikversiegelungen muss das Fahrzeug über Nacht bleiben, um optimal auszuhärten.</p>
+          </details>
 
-<details class="faqCard reveal">
-  <summary class="h3 faqSummary">Was kostet eine Aufbereitung genau?</summary>
-  <p class="p">Der Preis richtet sich nach dem Lackzustand und der Größe des Fahrzeugs. Wir nennen dir nach einer kurzen Besichtigung einen verbindlichen Preis – ohne versteckte Kosten.</p>
-</details>
+          <details class="faqCard reveal">
+            <summary class="h3 faqSummary">Was kostet eine Aufbereitung genau?</summary>
+            <p class="p">Der Preis richtet sich nach dem Lackzustand und der Größe des Fahrzeugs. Wir nennen dir nach einer kurzen Besichtigung einen verbindlichen Preis – ohne versteckte Kosten.</p>
+          </details>
 
-<details class="faqCard reveal">
-  <summary class="h3 faqSummary">Lohnt sich eine Keramikversiegelung?</summary>
-  <p class="p">Ja, wenn dir Werterhalt und einfache Reinigung wichtig sind. Der Lack wird härter, glatter und extrem wasserabweisend (Lotuseffekt).</p>
-</details>
+          <details class="faqCard reveal">
+            <summary class="h3 faqSummary">Lohnt sich eine Keramikversiegelung?</summary>
+            <p class="p">Ja, wenn dir Werterhalt und einfache Reinigung wichtig sind. Der Lack wird härter, glatter und extrem wasserabweisend (Lotuseffekt).</p>
+          </details>
 
-<details class="faqCard reveal">
-  <summary class="h3 faqSummary">Wie lange hält die Keramikversiegelung?</summary>
-  <p class="p">Das hängt vom gewählten Produkt und deiner Pflege ab. In der Regel bieten wir Standzeiten zwischen 12 und 36 Monaten. Regelmäßige Handwäsche verlängert die Haltbarkeit deutlich.</p>
-</details>
+          <details class="faqCard reveal">
+            <summary class="h3 faqSummary">Wie lange hält die Keramikversiegelung?</summary>
+            <p class="p">Das hängt vom gewählten Produkt und deiner Pflege ab. In der Regel bieten wir Standzeiten zwischen 12 und 36 Monaten. Regelmäßige Handwäsche verlängert die Haltbarkeit deutlich.</p>
+          </details>
 
-<details class="faqCard reveal">
-  <summary class="h3 faqSummary">Unterschied: 1-Step vs. Mehrstufige Politur?</summary>
-  <p class="p">Eine 1-Step Politur ist eine Hochglanz-Auffrischung für leichte Swirls. Bei tieferen Kratzern und verwittertem Lack ist eine mehrstufige Behandlung (Cut & Finish) nötig, um Defekte wirklich zu entfernen.</p>
-</details>
+          <details class="faqCard reveal">
+            <summary class="h3 faqSummary">Unterschied: 1-Step vs. Mehrstufige Politur?</summary>
+            <p class="p">Eine 1-Step Politur ist eine Hochglanz-Auffrischung für leichte Swirls. Bei tieferen Kratzern und verwittertem Lack ist eine mehrstufige Behandlung (Cut & Finish) nötig, um Defekte wirklich zu entfernen.</p>
+          </details>
         </div>
+
       </div>
     </section>
 
