--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
           </details>
 
           <details class="faqCard reveal">
-            <summary class="faqSummary">Kann ich mit Karte zahlen?</summary>
-            <p class="p">Ja, wir akzeptieren Barzahlung, EC-Karte sowie alle gängigen Kreditkarten (Visa, Mastercard, Amex) und Apple Pay direkt vor Ort.</p>
+            <summary class="faqSummary">Muss ich das Auto vorher ausräumen?</summary>
+            <p class="p">Bitte räume nach Möglichkeit persönliche Gegenstände, Wertsachen und Kindersitze vor dem Termin aus. So können wir effizient arbeiten und auch wirklich jeden Winkel reinigen.</p>
           </details>
 
         </div>
