--- a/index.html
+++ b/index.html
@@ -405,8 +405,12 @@
                 <span class="metaLine__v">Benzstr. 15b, 45768 Marl</span>
               </div>
               <div class="metaLine glass6 reveal">
-                <span class="metaLine__k">Kontakt</span>
+                <span class="metaLine__k">Telefon</span>
                 <span class="metaLine__v">+49 171 4745229</span>
+              </div>
+              <div class="metaLine glass6 reveal">
+                <span class="metaLine__k">E-Mail</span>
+                <span class="metaLine__v">info@emre-details.de</span>
               </div>
             </div>
           </div>
