--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
               </div>
               <div class="metaLine glass6 reveal">
                 <span class="metaLine__k">E-Mail</span>
-                <span class="metaLine__v">info@emre-details.de</span>
+                <span class="metaLine__v">info@emredetails.de</span>
               </div>
             </div>
           </div>
