--- a/leistungen.html
+++ b/leistungen.html
@@ -71,7 +71,7 @@
     <section class="hero bgSection fade-bottom">
       <div class="container" style="text-align:center; max-width:800px; margin: 0 auto;">
          <h1 class="h1 reveal">Unsere Pakete</h1>
-         <p class="lead reveal">Von der soliden Grundpflege bis zur High-End Veredelung. <br>Transparent kalkuliert, professionell umgesetzt.</p>
+         <p class="lead reveal" style="margin-inline: auto;">Von der soliden Grundpflege bis zur High-End Veredelung. <br>Transparent kalkuliert, professionell umgesetzt.</p>
       </div>
     </section>
 
