--- a/datenschutz.html
+++ b/datenschutz.html
@@ -37,7 +37,7 @@ Inhaber: Emre Özkul<br>
 Hebbelstr. 75<br>
 45768 Marl<br>
 Deutschland<br>
-E-Mail: emredetails@gmail.com</p>
+E-Mail: info@emredetails.de</p>
 
 <p><strong>2. Erhebung und Verarbeitung personenbezogener Daten</strong><br>
 Im Rahmen einer Kontaktaufnahme (z. B. über WhatsApp, E-Mail, Telefon oder Website) erheben wir folgende Daten: Name, Telefonnummer, E-Mail-Adresse (falls angegeben), Fahrzeugdaten (Modell, Zustand, etc.), Terminwünsche, Rechnungsdaten (für steuerliche Zwecke). Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage, zur Angebotserstellung, Terminvergabe, Durchführung der Dienstleistung und zur Rechnungsstellung verwendet.</p>
