--- a/impressum.html
+++ b/impressum.html
@@ -36,7 +36,7 @@ Hebbelstr. 75<br>
 Deutschland</p>
 <p><strong>Kontakt:</strong><br>
 Telefon: +49 171 4745229<br>
-E-Mail: emredetails@gmail.com</p>
+E-Mail: info@emredetails.de</p>
 <p><strong>Umsatzsteuer-ID</strong> gemäß § 27a Umsatzsteuergesetz:<br>
 nicht umsatzsteuerpflichtig</p>
 <p><strong>Verantwortlich für den Inhalt:</strong><br>
