--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
     </section>
 
-    <section class="section bgSection fade-both" id="leistungen" style="--bg-img: url('./leistungen.jpg');">
+    <section class="section bgSection fade-both" id="leistungen" style="--bg-img: url('./leistungen2.jpg');">
       <div class="container">
         <div class="sectionHead reveal">
           <div class="divGlow"></div>
