--- a/admin/index.html
+++ b/admin/index.html
@@ -70,10 +70,10 @@
         // KONFIGURATION (HIER SEITEN EINTRAGEN)
         // ==========================================
         const pagesToScan = [
-            { file: '/index.html', name: 'Startseite' },
-            // Füge hier weitere Seiten hinzu, z.B.:
-            // { file: '/leistungen.html', name: 'Leistungen' },
-            // { file: '/kontakt.html', name: 'Kontakt' }
+            { file: '/index.html', name: 'Home' },
+            { file: '/leistungen.html', name: 'Leistungen' },
+            { file: '/kontakt.html', name: 'Kontakt' },
+
         ];
         // ==========================================
 
