--- a/index.html
+++ b/index.html
@@ -209,8 +209,11 @@
       </div>
     </section>
 
-    <section class="section bgSection fade-both" id="leistungen" style="--bg-img: url('./leistungen2.jpg');">
-      <div class="container">
+<section class="section bgSection fade-both" id="leistungen" 
+         style="--bg-img: url('./leistungen2.jpg');" 
+         data-edit="leistungen_hintergrund" 
+         data-type="bg">
+  <div class="container">
         <div class="sectionHead reveal">
           <div class="divGlow"></div>
           <h2 class="h2">Leistungen im Überblick.</h2>
