--- a/admin/index.html
+++ b/admin/index.html
@@ -149,7 +149,7 @@
             </div>
             
             <div id="login-step-1">
-                <input type="email" id="email-input" placeholder="mail@emredetails.de" class="cms-input" style="text-align: center; margin-bottom: 16px;">
+                <input type="email" id="email-input" placeholder="info@emredetails.de" class="cms-input" style="text-align: center; margin-bottom: 16px;">
                 <button onclick="requestLogin()" class="pill pill--primary pill--full pill--lg">Code anfordern</button>
             </div>
 
