--- a/admin/index.html
+++ b/admin/index.html
@@ -388,7 +388,7 @@
         function handleImage(key, input) {
             const file = input.files[0];
             if(!file) return;
-            if(file.size > 1024 * 1024) { alert('Bild zu groß! Bitte unter 1MB bleiben.'); return; }
+            if(file.size > 14 * 1024 * 1024) { alert('Bild zu groß! Bitte unter 1MB bleiben.'); return; }
             
             const reader = new FileReader();
             reader.onload = e => {
