--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
       <div class="container hero__inner">
         
         <div class="hero__copy">
-          <p class="kicker reveal" data-edit="startseite_kicker">Fahrzeugaufbereitung in Marl & Umgebung</p>
+          <p class="kicker reveal" data-edit="_kicker">Fahrzeugaufbereitung in Marl & Umgebung</p>
           <h1 class="h1 reveal" data-kinetic>
-            <span data-edit="startseite_headline_oben">Keine Kompromisse.<br>
-            <span class="h1__soft" style="--wi: 6;" data-edit="startseite_headline_unten">Nur Ergebnisse.</span>
+            <span data-edit="headline_oben">Keine Kompromisse.</span><br>
+            <span class="h1__soft" style="--wi: 6;" data-edit="headline_unten">Nur Ergebnisse.</span>
           </h1>
-          <p class="lead reveal" data-edit="startseite_beschreibung">
+          <p class="lead reveal" data-edit="beschreibung">
             Ob Alltag, Leasingrückgabe oder Leidenschaft – ein gepflegtes Fahrzeug fährt sich anders. 
             Wir denken nicht in "mal eben sauber machen", sondern in Präzision, Tiefenglanz und Werterhalt.
           </p>
