--- a/admin/index.html
+++ b/admin/index.html
@@ -166,8 +166,10 @@
         
         <aside>
             <div class="sidebar-header">
-                <i class="fa-solid fa-layer-group" style="margin-right: 12px; color: var(--accent);"></i> Website Admin
-            </div>
+    <img src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" 
+         alt="Logo" 
+         style="max-height: 50px; width: auto; max-width: 100%;">
+</div>
             <nav class="sidebar-nav" id="page-nav">
                 </nav>
             <div style="padding: 20px; border-top: 1px solid var(--stroke);">
