--- a/admin/index.html
+++ b/admin/index.html
@@ -204,8 +204,12 @@
         // KONFIGURATION
         // ==========================================
         const pagesToScan = [
-            { file: '/index.html', name: 'Startseite' },
-            // { file: '/leistungen.html', name: 'Leistungen' }, 
+            { file: '/index.html', name: 'Home' },
+            { file: '/leistungen.html', name: 'Leistungen' },
+            { file: '/kontakt.html', name: 'Kontakt' },
+            { file: '/impressum.html', name: 'Impressum' },
+            { file: '/agb.html', name: 'AGB' },
+            { file: '/datenschutz.html', name: 'Datenschutz' },
         ];
         
         const API = '/api/admin';
