--- a/admin/index.html
+++ b/admin/index.html
@@ -165,10 +165,12 @@
     <div id="app" class="hidden" style="display: flex; width: 100%;">
         
         <aside>
-            <div class="sidebar-header">
+<div class="sidebar-header">
     <img src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" 
          alt="Logo" 
-         style="max-height: 50px; width: auto; max-width: 100%;">
+         style="max-height: 45px; width: auto; max-width: 100%; margin-right: 15px;">
+    
+    <span style="font-size: 20px; font-weight: 600; letter-spacing: 0.5px; color: var(--text);">Admin</span>
 </div>
             <nav class="sidebar-nav" id="page-nav">
                 </nav>
