--- a/admin/index.html
+++ b/admin/index.html
@@ -138,6 +138,33 @@
         .hidden { display: none !important; }
         .spin { animation: spin 1s linear infinite; }
         @keyframes spin { 100% { transform: rotate(360deg); } }
+
+        /* --- MEDIATHEK MODAL --- */
+#media-modal {
+    position: fixed; inset: 0; z-index: 10000;
+    background: rgba(2, 4, 8, 0.95); backdrop-filter: blur(10px);
+    display: none; flex-direction: column; padding: 40px;
+}
+.media-grid {
+    display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    gap: 20px; overflow-y: auto; padding-bottom: 40px;
+}
+.media-item-wrap { position: relative; group; cursor: pointer; }
+.media-item {
+    width: 100%; aspect-ratio: 1/1; object-fit: cover;
+    border-radius: 12px; border: 2px solid rgba(255,255,255,0.1);
+    transition: all 0.2s; background: #000;
+}
+.media-item:hover { border-color: #3278ff; transform: scale(1.05); }
+.close-modal {
+    position: absolute; top: 20px; right: 20px;
+    background: rgba(255,255,255,0.1); color: white;
+    border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer;
+}
+.media-badge {
+    position: absolute; bottom: 4px; right: 4px; font-size: 10px;
+    background: rgba(0,0,0,0.7); color: white; padding: 2px 6px; border-radius: 4px;
+}
     </style>
 </head>
 <body>
