--- a/admin/index.html
+++ b/admin/index.html
@@ -467,5 +467,13 @@
 
         checkAuth();
     </script>
+    <div id="media-modal">
+    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:30px;">
+        <h2 class="h2" style="font-size:24px;">Bild auswählen</h2>
+        <button onclick="closeLibrary()" class="close-modal">Schließen (ESC)</button>
+    </div>
+    <div id="media-grid" class="media-grid">
+        </div>
+</div>
 </body>
 </html>
