--- a/kontakt.html
+++ b/kontakt.html
@@ -159,7 +159,7 @@
           <div class="footer__brand">
              <img class="footer__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails">
           </div>
-          <div class="footer__sub">Fahrzeugaufbereitung Marl.</div>
+          <div class="footer__sub">Professionelle Fahrzeugaufbereitung in Marl. Keine Kompromisse bei Sauberkeit und Lackschutz.</div>
         </div>
         <div class="footer__right">
           <div class="footer__legal">
