--- a/leistungen.html
+++ b/leistungen.html
@@ -234,7 +234,10 @@
         </div>
       </div>
     </footer>
-    <a class="fab" href="https://wa.me/491714745229" data-edit="global_whatsapp_link"><img class="fab__img" src="./whatsapp.png"><span class="fab__text">WhatsApp</span></a>
+    <a class="fab" href="https://wa.me/491714745229" data-edit="global_whatsapp_fab">
+    <img class="fab__img" src="./whatsapp.png" alt="">
+    <span class="fab__text">WhatsApp</span>
+</a>
   </main>
   <script src="./main.js" defer></script>
   <script src="/js/cms.js"></script>
