--- a/leistungen.html
+++ b/leistungen.html
@@ -234,7 +234,7 @@
         </div>
       </div>
     </footer>
-    <a class="fab" href="https://wa.me/491714745229" data-edit="global_whatsapp_fab">
+<a class="fab" href="https://wa.me/491714745229" data-edit="global_whatsapp_link">
     <img class="fab__img" src="./whatsapp.png" alt="">
     <span class="fab__text">WhatsApp</span>
 </a>
