--- a/admin/index.html
+++ b/admin/index.html
@@ -195,9 +195,13 @@
     <script>
         // === CONFIG ===
         const pagesToScan = [
-            { file: '/index.html', name: 'Startseite' },
+            { file: '/index.html', name: 'Home' },
             { file: '/leistungen.html', name: 'Leistungen' },
             { file: '/kontakt.html', name: 'Kontakt' },
+            { file: '/impressum.html', name: 'Impresssum' },
+            { file: '/agb.html', name: 'AGB' },
+            { file: '/datenschutz.html', name: 'Datenschutz' },
+
         ];
         
         const API = '/api/admin';
