--- a/index.html
+++ b/index.html
@@ -388,10 +388,7 @@
         <div class="contact">
           <div class="contact__left">
             <h2 class="h2" data-edit="startseite_kontakt_headline">Interesse geweckt?</h2>
-            <p class="sub" data-edit="startseite_kontakt_sub">
-              Schreib mir kurz per WhatsApp oder nutze das Kontaktformular. 
-              Wir finden die passende Lösung für dein Auto.
-            </p>
+            <p class="sub" data-edit="startseite_kontakt_sub">Schreib mir kurz per WhatsApp oder nutze das Kontaktformular. Wir finden die passende Lösung für dein Auto.</p>
 
             <div class="contact__actions">
               <a class="pill pill--primary pill--lg pill--full glass6" href="https://wa.me/491714745229" target="_blank" rel="noreferrer" data-edit="global_whatsapp_link">
