--- a/datenschutz.html
+++ b/datenschutz.html
@@ -10,7 +10,7 @@
 <body>
   <header class="topbar">
     <div class="container topbar__inner">
-      <a class="brand" href="./index.html"><img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="Logo"></a>
+      <a class="brand" href="./index.html"><img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails Logo" loading="eager" data-edit="global_logo"></a>
       <nav class="nav">
         <a class="nav__link" href="./index.html">Home</a>
         <a class="nav__link" href="./leistungen.html">Leistungen</a>
