--- a/datenschutz.html
+++ b/datenschutz.html
@@ -63,7 +63,7 @@ Wenn Sie uns über WhatsApp kontaktieren, beachten Sie bitte, dass Daten (inkl. 
     <div class="container footer__inner">
       <div class="footer__left">
         <div class="footer__brand">
-          <img class="footer__logo" src="./logo.png" alt="EmreDetails" loading="lazy" decoding="async">
+          <img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails Logo" loading="eager" data-edit="global_logo">
         </div>
         <div class="footer__sub">
           Fahrzeugaufbereitung in Marl.
