--- a/kontakt.html
+++ b/kontakt.html
@@ -40,7 +40,7 @@
   <header class="topbar">
     <div class="container topbar__inner">
       <a class="brand" href="./index.html">
-        <img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="Logo">
+        <img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails Logo" loading="eager" data-edit="global_logo">
       </a>
       
       <nav class="nav">
@@ -157,7 +157,7 @@
       <div class="container footer__inner">
         <div class="footer__left">
           <div class="footer__brand">
-             <img class="footer__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails">
+             <img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails Logo" loading="eager" data-edit="global_logo">
           </div>
           <div class="footer__sub" data-edit="global_footer_claim">Professionelle Fahrzeugaufbereitung in Marl. Keine Kompromisse bei Sauberkeit und Lackschutz.</div>
         </div>
