--- a/datenschutz.html
+++ b/datenschutz.html
@@ -16,7 +16,7 @@
         <a class="nav__link" href="./leistungen.html">Leistungen</a>
         <a class="nav__link" href="./kontakt.html">Kontakt</a>
       </nav>
-      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/491714745229"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a></div>
+      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/491714745229" data-edit="global_whatsapp_link"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a></div>
     </div>
   </header>
 
@@ -24,34 +24,34 @@
     <section class="section legal">
       <div class="container">
         <div class="sectionHead reveal">
-          <h1 class="h2">Datenschutzerklärung</h1>
-          <p class="sub">Datenschutz</p>
+          <h1 class="h2" data-edit="datenschutz_headline">Datenschutzerklärung</h1>
+          <p class="sub" data-edit="datenschutz_sub">Datenschutz</p>
         </div>
         <div class="legal__content reveal">
           
-<p>Wir nehmen den Schutz Ihrer personenbezogenen Daten sehr ernst. Die Verarbeitung Ihrer Daten erfolgt ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, BDSG, DDG).</p>
+<p data-edit="datenschutz_intro">Wir nehmen den Schutz Ihrer personenbezogenen Daten sehr ernst. Die Verarbeitung Ihrer Daten erfolgt ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, BDSG, DDG).</p>
 
 <p><strong>1. Verantwortlicher</strong><br>
-EmreDetails<br>
+<span data-edit="datenschutz_adresse_block">EmreDetails<br>
 Inhaber: Emre Özkul<br>
 Hebbelstr. 75<br>
 45768 Marl<br>
-Deutschland<br>
-E-Mail: info@emredetails.de</p>
+Deutschland</span><br>
+E-Mail: <span data-edit="global_email_text">info@emredetails.de</span></p>
 
-<p><strong>2. Erhebung und Verarbeitung personenbezogener Daten</strong><br>
+<p data-edit="datenschutz_section_2"><strong>2. Erhebung und Verarbeitung personenbezogener Daten</strong><br>
 Im Rahmen einer Kontaktaufnahme (z. B. über WhatsApp, E-Mail, Telefon oder Website) erheben wir folgende Daten: Name, Telefonnummer, E-Mail-Adresse (falls angegeben), Fahrzeugdaten (Modell, Zustand, etc.), Terminwünsche, Rechnungsdaten (für steuerliche Zwecke). Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage, zur Angebotserstellung, Terminvergabe, Durchführung der Dienstleistung und zur Rechnungsstellung verwendet.</p>
 
-<p><strong>3. Speicherung & Dauer</strong><br>
+<p data-edit="datenschutz_section_3"><strong>3. Speicherung & Dauer</strong><br>
 Ihre Daten werden nur so lange gespeichert, wie es zur Erfüllung des Zwecks (z. B. Abwicklung des Auftrags) erforderlich ist oder gesetzlich vorgeschrieben ist (z. B. steuerliche Aufbewahrungsfristen).</p>
 
-<p><strong>4. Weitergabe an Dritte</strong><br>
+<p data-edit="datenschutz_section_4"><strong>4. Weitergabe an Dritte</strong><br>
 Es erfolgt eine Weitergabe Ihrer personenbezogenen Daten an Dritte. Ausgenommen hiervon sind gesetzliche Verpflichtungen.</p>
 
-<p><strong>5. Ihre Rechte</strong><br>
+<p data-edit="datenschutz_section_5"><strong>5. Ihre Rechte</strong><br>
 Sie haben das Recht auf Auskunft über Ihre gespeicherten Daten, Berichtigung oder Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit sowie Widerruf einer erteilten Einwilligung. Kontaktieren Sie uns hierfür jederzeit unter den oben genannten Kontaktdaten.</p>
 
-<p><strong>6. Kontaktaufnahme über WhatsApp</strong><br>
+<p data-edit="datenschutz_section_6"><strong>6. Kontaktaufnahme über WhatsApp</strong><br>
 Wenn Sie uns über WhatsApp kontaktieren, beachten Sie bitte, dass Daten (inkl. Telefonnummer) an die WhatsApp Ireland Limited übermittelt werden. Wir empfehlen keine sensiblen Daten über diesen Kanal zu teilen.</p>
 
         </div>
@@ -65,7 +65,7 @@ Wenn Sie uns über WhatsApp kontaktieren, beachten Sie bitte, dass Daten (inkl. 
         <div class="footer__brand">
           <img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails Logo" loading="eager" data-edit="global_logo">
         </div>
-        <div class="footer__sub">
+        <div class="footer__sub" data-edit="global_footer_claim">
           Fahrzeugaufbereitung in Marl.
         </div>
       </div>
@@ -82,7 +82,8 @@ Wenn Sie uns über WhatsApp kontaktieren, beachten Sie bitte, dass Daten (inkl. 
     </div>
   </footer>
 
-  <a class="fab" href="https://wa.me/491714745229" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">WhatsApp</a>
+  <a class="fab" href="https://wa.me/491714745229" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen" data-edit="global_whatsapp_link">WhatsApp</a>
   <script src="./main.js" defer></script>
+  <script src="/js/cms.js"></script>
 </body>
 </html>
