--- a/agb.html
+++ b/agb.html
@@ -16,7 +16,7 @@
         <a class="nav__link" href="./leistungen.html">Leistungen</a>
         <a class="nav__link" href="./kontakt.html">Kontakt</a>
       </nav>
-      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/491714745229"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a></div>
+      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/491714745229" data-edit="global_whatsapp_link"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a></div>
     </div>
   </header>
 
@@ -24,35 +24,35 @@
     <section class="section legal">
       <div class="container">
         <div class="sectionHead reveal">
-          <h1 class="h2">AGB</h1>
-          <p class="sub">Allgemeine Geschäftsbedingungen</p>
+          <h1 class="h2" data-edit="agb_headline">AGB</h1>
+          <p class="sub" data-edit="agb_sub">Allgemeine Geschäftsbedingungen</p>
         </div>
         <div class="legal__content reveal">
           
-<p><strong>Allgemeine Geschäftsbedingungen von EmreDetails</strong></p>
+<p data-edit="agb_intro"><strong>Allgemeine Geschäftsbedingungen von EmreDetails</strong></p>
 
-<p><strong>1. Geltungsbereich</strong><br>
+<p data-edit="agb_section_1"><strong>1. Geltungsbereich</strong><br>
 Diese Allgemeinen Geschäftsbedingungen gelten für sämtliche Dienstleistungen, die von EmreDetails angeboten und durch Kunden über alle Kommunikationswege (z. B. WhatsApp, E-Mail, Telefon) gebucht werden.</p>
 
-<p><strong>2. Terminbuchung & Zahlung</strong><br>
+<p data-edit="agb_section_2"><strong>2. Terminbuchung & Zahlung</strong><br>
 Die Terminvereinbarung erfolgt verbindlich nach Absprache. Die Zahlung ist unmittelbar nach Durchführung der Dienstleistung fällig – in bar oder per Überweisung. Ein Termin gilt als bestätigt, sobald ein konkreter Zeitpunkt beidseitig vereinbart wurde.</p>
 
-<p><strong>3. Stornierung & Verfügbarkeit</strong><br>
+<p data-edit="agb_section_3"><strong>3. Stornierung & Verfügbarkeit</strong><br>
 Terminänderungen oder Absagen müssen spätestens 24 Stunden vor dem vereinbarten Termin erfolgen. Bei kurzfristiger Absage oder Nichterscheinen behalten wir uns vor, künftige Buchungen abzulehnen. Da Termine nur begrenzt verfügbar sind, kann es zu Wartezeiten kommen. Es besteht kein Anspruch auf kurzfristige Terminvergabe.</p>
 
-<p><strong>4. Leistungen & Durchführung</strong><br>
+<p data-edit="agb_section_4"><strong>4. Leistungen & Durchführung</strong><br>
 Die durchgeführte Dienstleistung richtet sich nach der individuellen Absprache vor Ort und dem Zustand des Fahrzeugs. EmreDetails verpflichtet sich zur sorgfältigen und professionellen Ausführung aller vereinbarten Leistungen. Die Preise richten sich nach dem tatsächlichen Aufwand und Zustand des Fahrzeugs und werden vor Beginn der Arbeiten verbindlich mitgeteilt.</p>
 
-<p><strong>5. Haftung</strong><br>
+<p data-edit="agb_section_5"><strong>5. Haftung</strong><br>
 Für Schäden, die auf grobe Fahrlässigkeit oder Vorsatz durch EmreDetails zurückzuführen sind, wird gehaftet. Für bereits vorhandene Schäden oder unerkannte Vorschäden übernehmen wir keine Haftung. Eine Haftung für Folgeschäden, die durch nicht sachgemäße Nachpflege oder Nutzung entstehen, ist ausgeschlossen.</p>
 
-<p><strong>6. Gewährleistung</strong><br>
+<p data-edit="agb_section_6"><strong>6. Gewährleistung</strong><br>
 Mängel an der erbrachten Dienstleistung müssen innerhalb von 7 Tagen schriftlich mitgeteilt werden. EmreDetails prüft diese und wird bei berechtigten Reklamationen im Rahmen der gesetzlichen Gewährleistung nachbessern.</p>
 
-<p><strong>7. Datenschutz</strong><br>
+<p data-edit="agb_section_7"><strong>7. Datenschutz</strong><br>
 Alle im Rahmen der Buchung erhobenen personenbezogenen Daten werden vertraulich behandelt und ausschließlich zur Abwicklung des Auftrags verwendet. Es erfolgt keine Weitergabe an Dritte. Weitere Informationen finden Sie in der Datenschutzerklärung.</p>
 
-<p><strong>8. Schlussbestimmungen</strong><br>
+<p data-edit="agb_section_8"><strong>8. Schlussbestimmungen</strong><br>
 Es gilt das Recht der Bundesrepublik Deutschland. Gerichtsstand ist der Firmensitz von EmreDetails. Sollten einzelne Klauseln unwirksam sein, bleibt die Wirksamkeit der übrigen Bestimmungen unberührt.</p>
 
         </div>
@@ -66,7 +66,7 @@ Es gilt das Recht der Bundesrepublik Deutschland. Gerichtsstand ist der Firmensi
         <div class="footer__brand">
           <img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails Logo" loading="eager" data-edit="global_logo">
         </div>
-        <div class="footer__sub">
+        <div class="footer__sub" data-edit="global_footer_claim">
           Fahrzeugaufbereitung in Marl.
         </div>
       </div>
@@ -83,7 +83,8 @@ Es gilt das Recht der Bundesrepublik Deutschland. Gerichtsstand ist der Firmensi
     </div>
   </footer>
 
-  <a class="fab" href="https://wa.me/491714745229" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">WhatsApp</a>
+  <a class="fab" href="https://wa.me/491714745229" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen" data-edit="global_whatsapp_link">WhatsApp</a>
   <script src="./main.js" defer></script>
+  <script src="/js/cms.js"></script>
 </body>
 </html>
