--- a/admin/index.html
+++ b/admin/index.html
@@ -49,7 +49,24 @@
             aside.open { transform: translateX(0); }
             .burger-btn { display: block; }
             header { padding: 0 15px; }
-            .history-group { display: none !important; } /* Hide Undo/Redo on tiny screens to save space */
+            
+            /* MOBILE FLOATING HISTORY BUTTONS */
+            .history-group {
+                position: fixed;
+                top: 85px; /* Abstand von oben (unter Header) */
+                right: 20px; /* Abstand von rechts */
+                background: rgba(20, 20, 20, 0.95);
+                backdrop-filter: blur(10px);
+                padding: 8px 12px;
+                border-radius: 30px;
+                border: 1px solid #333;
+                box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+                z-index: 900;
+                display: flex !important;
+                gap: 12px;
+            }
+            /* Verstecke den Border rechts im Header, da Buttons jetzt floating sind */
+            .history-group { border-right: none !important; margin-right: 0 !important; padding-right: 0 !important; }
         }
 
         /* Editor Area */
@@ -133,7 +150,7 @@
             padding: 12px 24px; border-radius: 50px; z-index: 2000;
             box-shadow: 0 10px 30px rgba(0,0,0,0.5); font-size: 14px; font-weight: 500;
             transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            display: flex; align-items: center; gap: 10px;
+            display: flex; align-items: center; gap: 10px; width: max-content; max-width: 90%;
         }
         #welcome-toast.show { transform: translateX(-50%) translateY(0); }
 
@@ -162,7 +179,7 @@
 
     <div id="welcome-toast">
         <i class="fa-solid fa-hand-sparkles" style="color: #648cff;"></i>
-        Willkommen! Was ändern wir heute an deiner Website?
+        Willkommen! Was ändern wir heute?
     </div>
 
     <div id="login-overlay" style="position:fixed; inset:0; z-index:9999; display:grid; place-items:center;">
@@ -260,7 +277,7 @@
         function showWelcome() {
             const toast = document.getElementById('welcome-toast');
             setTimeout(() => toast.classList.add('show'), 500);
-            setTimeout(() => toast.classList.remove('show'), 4500);
+            setTimeout(() => toast.classList.remove('show'), 3000); // 3 Sekunden
         }
 
         // --- HELPERS ---
@@ -326,7 +343,7 @@
                 document.getElementById('app').classList.remove('hidden');
                 document.getElementById('app').style.display = 'flex'; 
                 initDashboard();
-                showWelcome(); // SHOW WELCOME MESSAGE
+                showWelcome(); 
             }
         }
         async function doLogin() {
@@ -388,6 +405,8 @@
 
                         if(el.tagName === 'IMG') {
                             type = 'image'; defaultVal = el.getAttribute('src');
+                        } else if(el.tagName === 'IFRAME') {
+                            type = 'text'; defaultVal = el.getAttribute('src');
                         } else if(el.getAttribute('data-type') === 'bg') {
                             type = 'image';
                             const match = (el.getAttribute('style')||'').match(/url\(['"]?(.*?)['"]?\)/);
@@ -422,7 +441,7 @@
                     div.id = `nav-p-${i}`;
                     div.onclick = () => { 
                         openPage(i); 
-                        if(window.innerWidth <= 768) toggleSidebar(); // Close sidebar on mobile click
+                        if(window.innerWidth <= 768) toggleSidebar(); 
                     };
                     div.innerHTML = `<span><i class="fa-regular fa-file-lines" style="margin-right:10px;"></i> ${page.name}</span> <span class="badge-count">${pageFields.length}</span>`;
                     nav.appendChild(div);
@@ -441,7 +460,7 @@
                 document.getElementById('nav-globals').classList.add('active');
                 document.getElementById('page-title').innerText = "Globale Einstellungen";
                 fieldsToShow = globalFields;
-                if(window.innerWidth <= 768) toggleSidebar(); // Close on mobile click
+                if(window.innerWidth <= 768) toggleSidebar();
             } else {
                 document.getElementById(`nav-p-${id}`).classList.add('active');
                 document.getElementById('page-title').innerText = pagesToScan[id].name;
@@ -512,6 +531,7 @@
             if(field.key.includes('global_telefon_text')) labelText = 'TELEFON';
             if(field.key.includes('global_email_text')) labelText = 'EMAIL';
             if(field.key.includes('global_adresse')) labelText = 'ADRESSE';
+            if(field.key === 'global_hero_video') labelText = 'YOUTUBE HERO VIDEO (EMBED LINK)';
 
             const wrap = document.createElement('div');
             wrap.className = 'cms-field-wrap';
